--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #0047AB;
+  --primary-color: #0047ab;
   --hover-color: #000080;
 }
 
@@ -10,11 +10,14 @@
 }
 
 body {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: radial-gradient(circle at 74.2% 50.9%, rgb(14, 72, 222) 5.2%, rgb(3, 22, 65) 75.3%);
+  background: radial-gradient(circle at 74.2% 50.9%,
+      rgb(14, 72, 222) 5.2%,
+      rgb(3, 22, 65) 75.3%);
   font-family: Arial, sans-serif;
 }
 
@@ -23,9 +26,12 @@ body {
   max-width: 500px;
   padding: 25px;
   text-align: center;
-  background: radial-gradient(592px at 48.2% 50%, rgba(255, 255, 249, 0.6) 0%, rgb(160, 199, 254) 74.6%);
+  background: radial-gradient(592px at 48.2% 50%,
+      rgba(255, 255, 249, 0.6) 0%,
+      rgb(160, 199, 254) 74.6%);
   border-radius: 10px;
-  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.06); /* Add a subtle shadow */
+  box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.06);
+  /* Add a subtle shadow */
 }
 
 input {
@@ -75,12 +81,24 @@ button:hover {
 }
 
 .error {
-  color: #a80000; 
-  background-color: #fff4f4; 
-  border: 1px solid #ffc7c7; 
-  padding: 10px; 
-  margin-top: 20px; 
-  border-radius: 5px; 
-  font-size: 16px; 
+  color: #a80000;
+  background-color: #fff4f4;
+  border: 1px solid #ffc7c7;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 5px;
+  font-size: 16px;
 }
 
+.app-creator {
+  position: absolute;
+  font-size: 13px;
+  bottom: 0;
+  left: 0;
+  color: #000080;
+  border-top-right-radius: 6px;
+  padding: 5px;
+  background: radial-gradient(592px at 48.2% 50%,
+      rgba(255, 255, 249, 0.6) 0%,
+      rgb(160, 199, 254) 74.6%);
+}
